--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: my-helmchart
-description: A minimal Helm chart for a Spring Boot application
+description: Minimal Helm chart with Istio, Grafana, and Prometheus
 version: 0.1.0
 appVersion: "1.0"
