--- a/helm/templates/spring-service.yaml
+++ b/helm/templates/spring-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-helmchart.fullname" . }}
+  name: my-helmchart-spring
+  labels:
+    app: my-helmchart-spring
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ include "my-helmchart.fullname" . }}
+    app: my-helmchart-spring
   ports:
     - name: http
       port: {{ .Values.service.port }}
