--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,3 +9,9 @@ service:
   type: ClusterIP
   port: 80
   targetPort: 8080
+
+  # Istio 설정
+  istio:
+    enabled: true
+    gatewayPort: 80
+    prefixPath: /sample
