--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -23,8 +23,8 @@ grafana:
   adminPassword: "admin"
   resources:
     requests:
-      memory: "256Mi"
+      memory: "512Mi"
       cpu: "250m"
     limits:
-      memory: "512Mi"
+      memory: "1Gi"
       cpu: "500m"
