--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -28,3 +28,14 @@ grafana:
     limits:
       memory: "1Gi"
       cpu: "500m"
+
+prometheus:
+  enabled: true
+  replicaCount: 1
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "500m"
+    limits:
+      memory: "1Gi"
+      cpu: "1000m"
