--- a/my-app/src/main/resources/application.properties
+++ b/my-app/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=my-app
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.health.probes.enabled=true
